# personal-apps

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  security_best_practices_report.md  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/extension/: README.md  offscreen.html  options.html  package.json  tsconfig.json  vite.config.ts
apps/extension/public/: manifest.json
apps/extension/src/: background.ts  manifest.smoke.test.ts  offscreen.ts
apps/extension/src/options/: OptionsApp.tsx  main.tsx  styles.css
apps/windows/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/windows/src/: TrayRuntimeApp.tsx  main.tsx  runtime.test.ts  runtime.ts  styles.css
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: main.rs
scripts/: package-extension.ps1
